# gitstat

./: .gitignore  .style.yapf  CHANGELOG.md  README.md  colorful-test.py  gitstat.py  pyproject.toml  setup.py  tox.ini
docs/: testing.md
gitstat/: __init__.py  gitstat.py
images/: gitstat_logo.xcf
pygitstat/tests/: test_gitstat.py
scripts/: lint.fish  publish.fish  test.fish
tests/: test_gitstat.py
